--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "multiparty": "^4.1.2",
     "session-file-store": "^1.0.0",
     "pug": "^2.0.0-beta6",
-    "react-jsonschema-form": "^1.0.0"
+    "react-jsonschema-form": "^1.0.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "assert": "^1.4.1",
@@ -47,6 +48,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.1",
     "react-popover": "^0.4.8",
+    "react-toastify": "^2.2.0",
     "should": "^13.1.3",
     "uglifyify": "^4.0.3"
   }
