--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
+    "moment": "^2.19.2",
     "react-toastify": "^2.2.1"
   }
 }
