--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-通用数据采集 (Confluence主页: http://58.211.187.150:18090/pages/viewpage.action?pageId=1049148) 2017-11-28 11:33:45
+通用数据采集 (Confluence主页: http://58.211.187.150:18090/pages/viewpage.action?pageId=1049148)
