--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-通用数据采集 (Confluence主页: http://58.211.187.150:18090/pages/viewpage.action?pageId=1049148)
+通用数据采集，服务器+web前端。 (Confluence主页: http://58.211.187.150:18090/pages/viewpage.action?pageId=1049148)
