depend forked mozilla-services/react-jsonschema-form.

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "moment": "^2.19.2",
+    "react-jsonschema-form": "file:///home/panzy/workspace/react-jsonschema-form",
     "react-toastify": "^2.2.1"
   }
 }
