--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.19.2",
     "react-bootstrap": "^0.31.5",
     "react-jsonschema-form": "file:///home/panzy/workspace/react-jsonschema-form",
+    "react-router-dom": "^4.2.2",
     "react-tabs": "^2.1.1",
     "react-toastify": "^2.2.1"
   }
