--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.5",
     "moment": "^2.19.2",
     "react-bootstrap": "^0.31.5",
+    "react-helmet": "^5.2.0",
     "react-jsonschema-form": "file:///home/panzy/workspace/react-jsonschema-form",
     "react-router-dom": "^4.2.2",
     "react-tabs": "^2.1.1",
